--- a/app_blog/static/css/styles_login.css
+++ b/app_blog/static/css/styles_login.css
@@ -13,6 +13,11 @@ body {
     max-width: 400px;
 }
 
+.custom-card {
+    background-color: rgba(255, 255, 255, 0.98);
+    border-radius: 1rem;
+}
+
 .hidden {
     display: none;
 }
