--- a/app_blog/templates/login.html
+++ b/app_blog/templates/login.html
@@ -6,21 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="/static/css/styles_login.css" rel="stylesheet" href="">
 </head>
 
 <body>
     <div class="container d-flex justify-content-center">
-        <div id="loginSection" class="card p-4">
+        <div id="loginSection" class="card p-4 custom-card">
             <h3 class="text-center mb-4">Login</h3>
             <form method="POST">
                 <label for="correo" class="form-label fw-bold">Correo</label>
-                <input type="email" class="form-control" name="correo" id="correo" placeholder="Ingrese su correo">
-                <br>
+                <input type="email" id="correo" class="form-control mb-4" name="correo" id="correo" placeholder="Ingrese su correo" required>
                 <label for="password" class="form-label fw-bold">Contraseña</label>
-                <input type="password" class="form-control" name="password" id="password"
-                    placeholder="Ingrese su contraseña">
-                <br>
+                <div class="input-group  mb-4">
+                    <input type="password" id="password" class="form-control" name="password" id="password" placeholder="Ingrese su contraseña" required>
+                    <button type="button" class="btn bg-secondary" onclick="seePassword(password)">
+                        <i id="password_icon" class="bi bi-eye-slash text-white"></i>
+                    </button>
+                </div>
                 <button type="submit" class="btn btn-primary w-100 mb-2" name="action" value="login">Iniciar
                     Sesión</button>
             </form>
@@ -29,24 +32,22 @@
                 <button class="btn btn-secondary w-100" onclick="showCreateAccount()">Crear cuenta</button>
             </div>
         </div>
-        <div id="createAccountSection" class="card p-4 hidden">
+        <div id="createAccountSection" class="card p-4 custom-card hidden">
             <h3 class="text-center mb-4">Crear cuenta</h3>
             <form method="POST">
                 <label for="correo" class="form-label fw-bold">Correo</label>
-                <input type="email" class="form-control" name="correo" id="correo" placeholder="Ingrese su correo">
-                <br>
+                <input type="email" id="correo" class="form-control  mb-4" name="correo" id="correo" placeholder="Ingrese su correo" required>
                 <button type="submit" class="btn btn-success w-100 mb-2" name="action" value="create">Crear
                     cuenta</button>
             </form>
             <button class="btn btn-light w-100" onclick="showLogin()">Login</button>
         </div>
-        <div id="forgotPasswordSection" class="card p-4 hidden">
+        <div id="forgotPasswordSection" class="card p-4 custom-card hidden">
             <h3 class="text-center mb-4">Recuperar contraseña</h3>
             <p class="text-center mb-3">Si olvidaste tu contraseña, ingresa tu correo para recuperarla.</p>
             <form method="POST">
                 <label for="correo" class="form-label fw-bold">Correo</label>
-                <input type="email" class="form-control" name="correo" id="correo" placeholder="Ingrese su correo">
-                <br>
+                <input type="email" id="correo" class="form-control mb-4" name="correo" id="correo" placeholder="Ingrese su correo" required>
                 <button type="submit" class="btn btn-primary mb-2 w-100" name="action"
                     value="recovery">Continuar</button>
             </form>
@@ -56,10 +57,11 @@
         </div>
     </div>
     <script>
-        console.log("{{ url_token }}");
+        console.log("{{url_token}}")
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/js/script_login.js"></script>
+    <script src="/static/js/script_see_password.js"></script>
 </body>
 
 </html>
