--- a/app_blog/templates/recovery.html
+++ b/app_blog/templates/recovery.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cambio Contraseña</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="/static/css/styles_login.css" rel="stylesheet" href="">
 </head>
 
 <body>
-    <form method="POST">
-        <label for="password">nueva contraseña</label>
-        <input type="password" name="password">
-        <br>
-        <label for="password2">repita contraseña</label>
-        <input type="password" name="password2">
-        <br>
-        <button type="submit">Cambair contraseña</button>
-    </form>
+    <div class="card p-4 custom-card">
+        <h3 class="text-center mb-4">Informacion del usuario</h3>
+        <form method="POST">
+            <label for="password" class="form-label fw-bold">Nueva contraseña</label>
+            <div class="input-group mb-2">
+                <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
+                <button type="button" class="btn bg-secondary" onclick="seePassword(password)">
+                    <i id="password_icon" class="bi bi-eye-slash text-white"></i>
+                </button>
+            </div>
+            <ul id="validations" class="mb-4">
+                <li id="length" style="color: red;">Debe tener al menos 8 caracteres</li>
+                <li id="capital" style="color: red;">Debe incluir al menos una letra mayúscula</li>
+                <li id="lower" style="color: red;">Debe incluir al menos un número</li>
+                <li id="number" style="color: red;">Debe incluir al menos un número</li>
+                <li id="symbol" style="color: red;">Debe incluir al menos un número</li>
+            </ul>
+            <label for="password2" class="form-label fw-bold">Repita la contraseña</label>
+            <div class="input-group mb-2">
+                <input type="password" id="password2" name="password2" class="form-control" placeholder="Repita la contraseña" required>
+                <button type="button" class="btn bg-secondary" onclick="seePassword(password2)">
+                    <i id="password2_icon" class="bi bi-eye-slash text-white"></i>
+                </button>
+            </div>
+            <ul id="validation_equality" class="mb-4">
+                <li id="equals" style="color: red;">Las contraseñas deben ser iguales</li>
+            </ul>
+            <button type="submit" class="btn btn-primary w-100">Crear cuenta</button>
+        </form>
+    </div>
+    <script src="/static/js/script_see_password.js"></script>
+    <script src="/static/js/script_set_password.js"></script>
 </body>
 
 </html>
