feat: implementación de la funcionalidad para crear posts
- Se agregó la función para crear posts.
- Se añadió la tabla 'posts' en la base de datos.
- Se reorganizó el código para mejorar su estructura y mantener el orden.

--- a/app_blog/templates/profile.html
+++ b/app_blog/templates/profile.html
@@ -1,54 +1,55 @@
 {% extends "base.html" %}
-{% block title %}Perfil{% endblock %}
+{% block styles %}
+    <link rel="stylesheet" href="/static/css/styles_profile.css">
+{% endblock %}
 {% block content %}
-<link rel="stylesheet" href="/static/css/styles_profile.css">
-<div class="container">
-    <div class="div-background row g-0" style="background-image: url('/static/images/background_profile.jpg');">
-        <div class="col-7 d-flex flex-column justify-content-end align-items-end">
-            <div id="div-image" class="profile-image d-flex flex-column justify-content-center align-items-center">
-                <img class="rounded-circle mb-4" width="250" height="250"
-                    src="{{ url_for('static', filename='uploads/profile_image/' + profile_image) }}" alt="">
-                <h3 id="name" class="text-name text-white">{{first_name}} {{last_name}}</h3>
-            </div>
-        </div>
-        <div class="col-5 d-flex align-items-start">
-            <div id="div-info" class="div-info d-flex">
-                <div id="box-info" class="card-custom text-white">
-                    <p class="test">Usuario: {{first_name}} {{last_name}}</p>
-                    <p class="test">Correo: {{correo}}</p>
+    <div class="container">
+        <div class="div-background row g-0" style="background-image: url('/static/images/background_profile.jpg');">
+            <div class="col-7 d-flex flex-column justify-content-end align-items-end">
+                <div id="div-image" class="profile-image d-flex flex-column justify-content-center align-items-center">
+                    <img class="rounded-circle mb-4" width="250" height="250"
+                        src="{{ url_for('static', filename='uploads/profile_image/' + profile_image) }}" alt="">
+                    <h3 id="name" class="text-name text-white">{{first_name}} {{last_name}}</h3>
                 </div>
-                <button id="arrow-info" class="arrow-info btn p-2 border-0 border-0 bg-transparent"
-                    onclick="showInformation()">
-                    <i class="bi bi-arrow-bar-right fs-1 text-white"></i>
-                </button>
+            </div>
+            <div class="col-5 d-flex align-items-start">
+                <div id="div-info" class="div-info d-flex">
+                    <div id="box-info" class="card-custom text-white">
+                        <p class="test">Usuario: {{first_name}} {{last_name}}</p>
+                        <p class="test">Correo: {{correo}}</p>
+                    </div>
+                    <button id="arrow-info" class="arrow-info btn p-2 border-0 bg-transparent"
+                        onclick="showInformation()">
+                        <i class="bi bi-arrow-bar-right fs-1 text-white"></i>
+                    </button>
+                </div>
             </div>
         </div>
+        <div>
+            <nav class="navbar navbar-expand-lg">
+                <div class="collapse navbar-collapse nav-tabs" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <button type="button" class="nav-link">Todos</button>
+                        </li>
+                        <li class="nav-item">
+                            <button type="button" class="nav-link">Más vistos</button>
+                        </li>
+                        <li class="nav-item">
+                            <button type="button" class="nav-link">Más estrellas</button>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <button type="button" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Tags</button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item">Action</a></li>
+                                <li><a class="dropdown-item">Another action</a></li>
+                                <li><a class="dropdown-item">Something else here</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
-    <div>
-        <nav class="navbar navbar-expand-lg">
-            <div class="collapse navbar-collapse nav-tabs" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <button type="button" class="nav-link">Todos</button>
-                    </li>
-                    <li class="nav-item">
-                        <button type="button" class="nav-link">Más vistos</button>
-                    </li>
-                    <li class="nav-item">
-                        <button type="button" class="nav-link">Más estrellas</button>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <button type="button" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Tags</button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item">Action</a></li>
-                            <li><a class="dropdown-item">Another action</a></li>
-                            <li><a class="dropdown-item">Something else here</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-</div>
-<script src="/static/js/script_perfil.js"></script>
+    <script src="/static/js/script_perfil.js"></script>
 {% endblock %}
