--- a/app_blog/templates/create-account.html
+++ b/app_blog/templates/create-account.html
@@ -13,7 +13,7 @@
 <body>
     <div class="card p-4 custom-card">
         <h3 class="text-center mb-4">Informacion del usuario</h3>
-        <form method="POST">
+        <form id="createForm">
             <label for="first_name" class="form-label fw-bold">Nombre</label>
             <input type="text" id="first_name" name="first_name" class="form-control  mb-4" placeholder="Nombre"
                 required>
@@ -51,6 +51,7 @@
     </div>
     <script src="/static/js/script_see_password.js"></script>
     <script src="/static/js/script_set_password.js"></script>
+    <script src="/static/js/script_create_account.js"></script>
 </body>
 
 </html>
