--- a/app_blog/templates/login.html
+++ b/app_blog/templates/login.html
@@ -24,8 +24,7 @@
                         <i id="password_icon" class="bi bi-eye-slash text-white"></i>
                     </button>
                 </div>
-                <button type="submit" class="btn btn-primary w-100 mb-2" name="action" value="login">Iniciar
-                    Sesión</button>
+                <button type="submit" class="btn btn-primary w-100 mb-2">Iniciar Sesión</button>
             </form>
             <div class="d-grid">
                 <a class="d-block text-center mb-2" onclick="showForgotPassword()">¿Olvidaste tu contraseña?</a>
@@ -37,8 +36,7 @@
             <form method="POST">
                 <label for="correo" class="form-label fw-bold">Correo</label>
                 <input type="email" id="correo" class="form-control  mb-4" name="correo" id="correo" placeholder="Ingrese su correo" required>
-                <button type="submit" class="btn btn-success w-100 mb-2" name="action" value="create">Crear
-                    cuenta</button>
+                <button type="submit" class="btn btn-success w-100 mb-2">Crear cuenta</button>
             </form>
             <button class="btn btn-light w-100" onclick="showLogin()">Login</button>
         </div>
@@ -48,8 +46,7 @@
             <form method="POST">
                 <label for="correo" class="form-label fw-bold">Correo</label>
                 <input type="email" id="correo" class="form-control mb-4" name="correo" id="correo" placeholder="Ingrese su correo" required>
-                <button type="submit" class="btn btn-primary mb-2 w-100" name="action"
-                    value="recovery">Continuar</button>
+                <button type="submit" class="btn btn-primary mb-2 w-100">Continuar</button>
             </form>
             <div class="d-flex justify-content-between">
                 <button class="btn btn-light w-100" onclick="showLogin()">Volver</button>
