--- a/app_blog/templates/post.html
+++ b/app_blog/templates/post.html
@@ -1,46 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
-            </a>
-    
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
-            </ul>
-    
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-            </form>
-    
-            <div class="dropdown text-end">
-                <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
-                </a>
-                <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-                    <li><a class="dropdown-item" href="#">New project...</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
-                </ul>
+{% extends "base.html" %}
+{% block styles %}
+    <link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
+    <link href="/static/css/styles_write_post.css" rel="stylesheet" />
+{% endblock %}
+{% block content %}
+    <div class="container my-5">
+        <div id="card-title" class="card mb-5 rounded-0 rounded-bottom">
+            <div class="card-body d-flex">
+                <h1 class="bg-transparent border-0 text-center title-textarea">{{title}}</h1>
+            </div>
+            <div class="card-footer">
+                <div class="d-flex align-items-center justify-content-center">
+                    <img class="rounded-circle" width="50" height="50"
+                        src="{{ url_for('static', filename='uploads/profile_image/' + profile_image) }}" alt="">
+                    <div class="ms-2">
+                        <p id="name-card" class="text-name mb-0">{{first_name}} {{last_name}}</p>
+                        <p id="date-card" class="card-text">{{date}}</p>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="mb-2">
+            <p>asd</p>  
+        </div>
     </div>
-</body>
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+{% endblock %}
