feat: mejoras visuales y nuevas funcionalidades en configuración de usuario y posts
- Se mejoró visualmente la sección de configuraciones del usuario.
- Se implementaron las opciones para:
  - Cambiar imagen de perfil.
  - Cambiar nombre de usuario.
  - Cambiar contraseña.
- Se agregó la funcionalidad para escribir comentarios en los posts.
- Para esta funcionalidad, se creó una nueva tabla en la base de datos: 'comments'.

--- a/app_blog/templates/base.html
+++ b/app_blog/templates/base.html
@@ -42,7 +42,7 @@
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
                             <li><a class="dropdown-item" href="/post/create"><i class="bi bi-file-earmark-post me-2"></i>Crear post</a></li>
                             <li><a class="dropdown-item" href="/profile/setting"><i class="bi bi-gear me-2"></i>Configuración</a></li>
-                            <li><a class="dropdown-item" href="/profile"><i class="bi bi-person me-2"></i>Perfil</a></li>
+                            <li><a class="dropdown-item" href="/profile?id={{id}}"><i class="bi bi-person me-2"></i>Perfil</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item text-danger" href="/logout"><i class="bi bi-box-arrow-right me-2"></i>Cerrar sesión</a></li>
                         </ul>
