--- a/app_blog/templates/create-account.html
+++ b/app_blog/templates/create-account.html
@@ -15,15 +15,13 @@
         <h3 class="text-center mb-4">Informacion del usuario</h3>
         <form id="createForm">
             <label for="first_name" class="form-label fw-bold">Nombre</label>
-            <input type="text" id="first_name" name="first_name" class="form-control  mb-4" placeholder="Nombre"
-                required>
+            <input type="text" id="first_name" name="first_name" class="form-control  mb-4" placeholder="Nombre" required>
             <label for="last_name" class="form-label fw-bold">Apellido</label>
             <input type="text" id="last_name" name="last_name" class="form-control  mb-4" placeholder="Apellido"
                 required>
             <label for="password" class="form-label fw-bold">Contraseña</label>
             <div class="input-group mb-2">
-                <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña"
-                    required>
+                <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
                 <button type="button" class="btn bg-secondary" onclick="seePassword(password)">
                     <i id="password_icon" class="bi bi-eye-slash text-white"></i>
                 </button>
@@ -37,8 +35,7 @@
             </ul>
             <label for="password2" class="form-label fw-bold">Repita la contraseña</label>
             <div class="input-group mb-2">
-                <input type="password" id="password2" name="password2" class="form-control"
-                    placeholder="Repita la contraseña" required>
+                <input type="password" id="password2" name="password2" class="form-control" placeholder="Repita la contraseña" required>
                 <button type="button" class="btn bg-secondary" onclick="seePassword(password2)">
                     <i id="password2_icon" class="bi bi-eye-slash text-white"></i>
                 </button>
