--- a/app_blog/templates/login.html
+++ b/app_blog/templates/login.html
@@ -31,7 +31,7 @@
                 <button class="btn btn-secondary w-100" onclick="showCreateAccount()">Crear cuenta</button>
             </div>
         </div>
-        <div id="createAccountSection" class="card p-4 custom-card hidden">
+        <div id="createAccountSection" class="card p-4 custom-card" style="display: none;">
             <h3 class="text-center mb-4">Crear cuenta</h3>
             <form method="POST">
                 <label for="correo" class="form-label fw-bold">Correo</label>
@@ -40,7 +40,7 @@
             </form>
             <button class="btn btn-light w-100" onclick="showLogin()">Login</button>
         </div>
-        <div id="forgotPasswordSection" class="card p-4 custom-card hidden">
+        <div id="forgotPasswordSection" class="card p-4 custom-card" style="display: none;">
             <h3 class="text-center mb-4">Recuperar contraseña</h3>
             <p class="text-center mb-3">Si olvidaste tu contraseña, ingresa tu correo para recuperarla.</p>
             <form method="POST">
